# zkOracle-RISC0

./: Cargo.toml  README.md  demo.sh
contracts/: PriceOracle.sol
core/: Cargo.toml
core/src/: lib.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
script/: Deploy.s.sol
simple-proxy/: binance.js  btcturk.js  index.js  key  package-lock.json  package.json  pnpm-lock.yaml  signature-test.js  uniswap.js
src/: Cargo.toml  main.rs
tests/: PriceOracle.t.sol
