[package]
name = "json-example"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-build = { version = "0.19.1" }
risc0-zkvm = { version = "0.19.1", default-features = false }
bonsai-sdk = { version = "0.5.1" }
bonsai-ethereum-relay = { version = "0.5.1" }
methods = { path = "methods" }
json-core = { path = "core" }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/prove"]
profiler = ["risc0-zkvm/profiler"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

