[package]
name = "json-example"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-build = { version = "0.19.1" }
risc0-zkvm = { version = "0.19.1", default-features = false }
bonsai-sdk = { version = "0.5.1" }
bonsai-ethereum-relay = { version = "0.5.1" }
methods = { path = "methods" }
json-core = { path = "core" }
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
serde = "1.0"
anyhow = "1.0"
clap = "4.4"
reqwest = "0.11.22"
tokio = "1.34.0"
serde_json = "1.0.108"

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/prove"]


# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

