[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "0.19.1", features = ["guest-list"] }

[dependencies]
risc0-build = { version = "0.19.1", features = ["guest-list"] }
risc0-zkvm = { version = "0.19.1" }

[package.metadata.risc0]
methods = ["guest"]