[package]
name = "json-example"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
json-core = { path = "../core" }
json-methods = { path = "../methods" }
serde = "1.0"

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/prove"]
profiler = ["risc0-zkvm/profiler"]
